Suite du rapport

--- a/rapport/projet_système.tex
+++ b/rapport/projet_système.tex
@@ -84,7 +84,9 @@
 
    \include{corps/front}
 
-   \include{corps/main}
+   \include{corps/exploitation-path}
+
+   % \include{corps/main}
 
 %   \include{corps/annexe1}
 %
