--- a/rapport/projet_système.tex
+++ b/rapport/projet_système.tex
@@ -80,16 +80,18 @@
 
 \maketitle
 
+   \include{corps/intro}
+
    \tableofcontents
 
    \include{corps/front}
 
    \include{corps/exploitation-path}
 
-   % \include{corps/main}
+   \include{corps/métrologie}
 
-%   \include{corps/annexe1}
-%
+   % \include{corps/main}
+% %
 %   \include{corps/annexe2}
 
 
@@ -100,8 +102,13 @@
    \bibliography{bib/biblio}
    \addcontentsline{toc}{section}{Références}
 
-% \listoffigures
-% \addcontentsline{toc}{section}{Liste des figures}
+
+
+   \listoffigures
+   \addcontentsline{toc}{section}{Liste des figures}
+
+   \include{corps/annexe1}
+
 
 
 
