rapport fini prêt à relire

--- a/rapport/corps/métrologie.tex
+++ b/rapport/corps/métrologie.tex
@@ -9,7 +9,7 @@
 
       \begin{figure}[h]
           \centering
-          \includegraphics[width=.7\textwidth]{/Users/thomasprevost/OneDrive - Ecole Nationale Supérieure de Techniques Avancées Bretagne/Cours/projet système/py/rapport/imgs/point_fixe}
+          \includegraphics[width=.7\textwidth]{imgs/point_fixe}
           \caption{Position du point de référence}
           \label{fig:pt-fixe}
       \end{figure}
@@ -19,10 +19,10 @@
 
       \begin{figure}[h]
           \centering
-          \includegraphics[width=.8\textwidth]{/Users/thomasprevost/OneDrive - Ecole Nationale Supérieure de Techniques Avancées Bretagne/Cours/projet système/py/rapport/imgs/fidélité}
+          \includegraphics[width=.8\textwidth]{imgs/fidélité}
           \caption{Points mesurés par les récepteurs}
           \label{fig:fidel}
-      \end{figure}[fig points mesures]
+      \end{figure}
 
       \subsubsection{Étude de la fidélité}
          Une première étude que nous avons décidé de mener, étant donné l'allure des mesures prises est une étude statistique.
@@ -34,4 +34,3 @@
          Une seconde analyse menée a été une comparaison des positions moyennes aux coordonnées connues du point de référence, dont les résultats sont également présentés dans le tableau en première annexe.
 
          Il est cependant possible de remarquer que le récepteur le moins précis a une précision mesurée de l'ordre du mètre, tandis que le récepteur le plus précis a une précision de l'ordre du millimètre.
-
