--- a/rapport/projet_système.tex
+++ b/rapport/projet_système.tex
@@ -33,6 +33,8 @@
 
 \renewcommand{\labelenumi}{\textbf{\arabic{enumi}.}}
 
+\renewcommand{\phi}{\varphi}
+
 
 %\usepackage{fourier}
 
@@ -86,9 +88,15 @@
 
    \include{corps/front}
 
+   \include{corps/acquisition}
+
    \include{corps/exploitation-path}
 
+   \include{corps/satellites}
+
    \include{corps/métrologie}
+
+   \include{corps/conclusion}
 
    % \include{corps/main}
 % %
