--- a/rapport/corps/annexe1.tex
+++ b/rapport/corps/annexe1.tex
@@ -1,5 +1,5 @@
-\section*{Annexe I -- Données numériques}
-\addcontentsline{toc}{section}{Annexe I}
+\section*{Annexe -- Résultats numériques}
+\addcontentsline{toc}{section}{Annexe -- Résultats numériques}
 
    \begin{table}[h]
        \centering
