--- a/rapport/corps/métrologie.tex
+++ b/rapport/corps/métrologie.tex
@@ -26,11 +26,11 @@
 
       \subsubsection{Étude de la fidélité}
          Une première étude que nous avons décidé de mener, étant donné l'allure des mesures prises est une étude statistique.
-         Il nous a donc été possible de calculer, pour chaque acquisition, une coordonnée moyenne ainsi que des écarts-type, ayant tout naturellement mené vers l'estimation d'une incertitude statistique (type A), dont les résultats sont présentés dans le tableau placé en première annexe.
+         Il nous a donc été possible de calculer, pour chaque acquisition, une coordonnée moyenne ainsi que des écarts-type, ayant tout naturellement mené vers l'estimation d'une incertitude statistique (type A), dont les résultats sont présentés dans le tableau placé en annexe.
 
          On peut entre autres remarquer une dispersion plus forte pour le récepteur le moins précis, ce qui est bien le résultat que nous attendions.
 
       \subsubsection{Étude de la justesse}
-         Une seconde analyse menée a été une comparaison des positions moyennes aux coordonnées connues du point de référence, dont les résultats sont également présentés dans le tableau en première annexe.
+         Une seconde analyse menée a été une comparaison des positions moyennes aux coordonnées connues du point de référence, dont les résultats sont également présentés dans le tableau en annexe.
 
          Il est cependant possible de remarquer que le récepteur le moins précis a une précision mesurée de l'ordre du mètre, tandis que le récepteur le plus précis a une précision de l'ordre du millimètre.
