--- a/rapport/projet_système.tex
+++ b/rapport/projet_système.tex
@@ -55,7 +55,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{}
+\fancyhead[L]{\textsc{Arango}, \textsc{Chikhi}, \textsc{Simpore}, \textsc{Prévost}}
 \fancyhead[C]{}
 \fancyhead[R]{Projet découverte de système}
 \fancyfoot[L]{}
@@ -67,14 +67,14 @@
 
 
 \title{Positionnement GNSS : du mètre au millimètre}
-\author{}
+\author{Paco \textsc{Arango}, Tom \textsc{Chikhi}, Sheick \textsc{Simpore}, \\Thomas \textsc{Prévost}}
 \date{\today}
 \doctype{Projet découverte de système}
 \promo{FISE 2024}
 \etablissement{\textsc{Ensta} Bretagne\\ 2, rue François Verny\\
    29806 \textsc{Brest} cedex\\ \textsc{France}}
 \logoEcole{\includegraphics[height=4.2cm]{logo_ENSTA_Bretagne_Vertical_CMJN}}
-
+\imgGarde{\includegraphics[width=.4\textwidth]{imgs/illus}}
 
 \newcommand{\ie}{\textit{i.e.}}
 
