--- a/rapport/styles/pageGardeEnsta.sty
+++ b/rapport/styles/pageGardeEnsta.sty
@@ -102,16 +102,20 @@
       }
     }
   \end{center}
-    \vskip1em
+    \vskip 1em
         \begin{center}%
           {\Huge\bf \@title \par}%
         \end{center}%
-    \vskip1em
+    \vskip 3em
         \begin{center}%
           \@imgGarde
         \end{center}%
-        \vskip 1em
+
+        \vskip 3em
+
         \begin{center}%
+          \rule{3cm}{1pt}
+
           {\large\lineskip .75em \@author \par}
         \end{center}%
         \vfill
